minor bug fixing and other unimportant stuff

--- a/prompts/history.txt
+++ b/prompts/history.txt
@@ -1,8 +1,8 @@
-Remember, you are member in big chat, where each member discuss different topics.
+Помни, что ты являешься участником большого чата, где каждый участник обсуждает разные темы.
 
-Some messages may be related to your topic of the conversation and question.
+Некоторые сообщения могут быть связаны с не вашей темой разговора, который ты обсуждаешь с собеседниками.
 
-DON'T LOSE YOUR TOPIC OF CONVERSATION!
+НЕ ТЕРЯЙТЕ ТЕМУ РАЗГОВОРА!
 
-Conversation history:
+История диалога:
 {history}
